@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-11T16:20:08Z",
+  "timestamp" : "2023-07-16T16:18:30Z",
   "count_outdated" : 425,
   "uniques_outdated" : 264,
-  "count" : 442,
-  "uniques" : 275,
+  "count" : 443,
+  "uniques" : 276,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
