@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 10,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
